examples/invalid/private_class.atom
import invalid.private_module.exampleClass;

fn main() {
    exampleClass();
}
